[package]
name = "stremio"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "A fast & async library for Stremio, written in Rust"
readme = "README.md"
repository = "https://github.com/gauravssnl/stremio"
keywords = ["api", "stremio", "TCP"]

[dependencies]
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[dev-dependencies]
tokio = { version = "1", features = ["full"] }